--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -68,10 +68,15 @@
     grid-column: span 4;
 }
 
-.section_element > div.rating_box {
-
-}
-
 .section_element > div:first-child {
     font-weight: bolder;
+}
+
+.section_element{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+svg{
+    width: 20px;
 }
