--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -22,17 +22,20 @@
     text-align: center;
 }
 
+/* Survey Form: Participant info + surfey questions. */
 .survey_form {     
     display: flex;
     flex-direction: column;
     margin: 10px 30px;
 }
 
+/* The survey form is separated into sections. */
 .section {
     width: 100%;
     margin: 10px 0;
 }
 
+/* Each section has a title/header: its first div element. */
 .section > div:first-child {
     color: var(--dark-blue);
     font-size: larger;
@@ -46,7 +49,8 @@
     border-bottom: 2px solid var(--dark-blue);
 }
 
-.section form {
+/* The participant identity form. */
+.section #identity_form {
     display: grid;
     margin: 20px 0;
     gap: 10px 20px;
@@ -55,24 +59,24 @@
     align-items: center;
 }
 
-.section textarea {
+/* The participant identity form textarea height. */
+.section #identity_form textarea {
     min-height: 200px;
 }
 
+/* Add the required indicator on participant identity form labels. */
 .section label.required::after {
     content: ' *';
     color: red;
 }
 
-.section form *:nth-last-child(-n+4) {
+/* The last two textareas (+ their labels) in the participant identify form must take full row. */
+.section #identity_form *:nth-last-child(-n+4) {
     grid-column: span 4;
 }
 
-.section_element > div:first-child {
-    font-weight: bolder;
-}
-
-.section_element {
+/* Each section may contain one or more questions. */
+.section .question {
     display: grid;
     align-items: center;
     margin: 20px 10px;
@@ -80,18 +84,37 @@
     gap: 5px;
 }
 
-.section_element input[type=radio] {
+/* Section question title style */
+.section .question > div:first-child {
+    font-size: large;
+    font-weight: bolder;
+}
+
+/* Section question emojies */
+.rating-emoji {
+    width: 32px;
+    margin: 4px;
+    justify-self: center;
+}
+
+/* Section question radios */
+.section .question input[type=radio] {
     width: 18px;
     height: 18px;
     justify-self: center;
 }
 
-.section_element label {
+/* Section question elements' labels */
+.section .question > label {
     margin-left: 10px;
 }
 
-.rating-emoji {
-    width: 32px;
-    margin: 4px;
-    justify-self: center;
+.section .question > label:last-of-type {
+    margin: 10px 20px;
+}
+
+.section .question textarea {
+    grid-column: span 5;
+    margin: 0 20px;
+    min-height: 100px;
 }
